# hermes-trae-demo

./: .coverage  .gitignore  .trae-task.md  README.md  pyproject.toml  setup.sh  trae-agent.sh
app/: auth.py  config.py  database.py  deps.py  main.py  models.py  routers.py  schemas.py
hermes_trae_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_auth.py  test_main.py  test_permissions.py  test_users.py
